misc/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-monitoring
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "grafana.bcan.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: promstack-grafana 
            port:
              number: 80
